--- a/css/hanbok/hanbok_newWave/hanbok_newWave.scss
+++ b/css/hanbok/hanbok_newWave/hanbok_newWave.scss
@@ -167,41 +167,41 @@
 
 
 
-@media (min-width: 1024px){
-  .newwaveMainText{
-    font-size: 3rem;
-    letter-spacing: 46px;
-    font-weight: 600;
-    width: 20vw;
-    height: 10vh;
-}
+// @media (min-width: 1024px){/
+//   .newwaveMainText{
+//     font-size: 3rem;
+//     letter-spacing: 46px;
+//     font-weight: 600;
+//     width: 20vw;
+//     height: 10vh;
+// }
 
-}
+// }
 
-@media (min-width: 768px) and (max-width : 1023px){
+// @media (min-width: 768px) and (max-width : 1023px){
 
-  .newwaveMainText{
-      font-size: 2rem;
-      letter-spacing: 26px;
-      font-weight: 600;
-      width: 20vw;
-      height: 6vh;
-  }
-  .newwaveMainImage{
-  width: 81vw;
-  // height: 120vh;
-  }
-}
+//   .newwaveMainText{
+//       font-size: 2rem;
+//       letter-spacing: 26px;
+//       font-weight: 600;
+//       width: 20vw;
+//       height: 6vh;
+//   }
+//   .newwaveMainImage{
+//   width: 81vw;
+//   // height: 120vh;
+//   }
+// }
 
-@media (max-width: 767px){
-  .newwaveMainText{
-    width: 20vw;
-    height: 5vh;
-    font-size: 1.5rem;
-    letter-spacing: 15px;
-    font-weight: 600;
-}
-.newwaveMainImage{
-  width: 60vw;
-  }
-}
+// @media (max-width: 767px){
+//   .newwaveMainText{
+//     width: 20vw;
+//     height: 5vh;
+//     font-size: 1.5rem;
+//     letter-spacing: 15px;
+//     font-weight: 600;
+// }
+// .newwaveMainImage{
+//   width: 60vw;
+//   }
+// }
