--- a/css/hanbok/hanbok_tradition/hanbok.scss
+++ b/css/hanbok/hanbok_tradition/hanbok.scss
@@ -316,99 +316,99 @@
 
 
 
-@media (min-width: 1024px) {
-  #logo {
-    width: 30vw;
-  }
+// @media (min-width: 1024px) {
+//   #logo {
+//     width: 30vw;
+//   }
 
-  #desTextOne {
-    position: absolute;
-    bottom: 12vh;
-    left: 1vw;
-  }
+//   #desTextOne {
+//     position: absolute;
+//     bottom: 12vh;
+//     left: 1vw;
+//   }
 
-  #description_two {
-    position: absolute;
-    top: 50vh;
-    right: 25vw;
-    font-size: 1rem;
-  }
+//   #description_two {
+//     position: absolute;
+//     top: 50vh;
+//     right: 25vw;
+//     font-size: 1rem;
+//   }
 
-  #description_three {
-    width: 40vw;
-    height: 30vh;
-    font-size: 1rem;
-    // font-weight: 540;
-    line-height: 30px;
-    position: absolute;
-    left: 10vw;
-    top: 10vh;
-    font-family: 'Gowun Batang', seri
-  }
-}
+//   #description_three {
+//     width: 40vw;
+//     height: 30vh;
+//     font-size: 1rem;
+//     // font-weight: 540;
+//     line-height: 30px;
+//     position: absolute;
+//     left: 10vw;
+//     top: 10vh;
+//     font-family: 'Gowun Batang', seri
+//   }
+// }
 
-@media (min-width: 768px) and (max-width : 1023px) {
+// @media (min-width: 768px) and (max-width : 1023px) {
 
-  #desTextOne {
-    position: absolute;
-    bottom: 15vh;
-    left: 1vw;
-    font-size: 0.7rem;
-  }
+//   #desTextOne {
+//     position: absolute;
+//     bottom: 15vh;
+//     left: 1vw;
+//     font-size: 0.7rem;
+//   }
 
-  #description_two {
-    width: 25vw;
-    height: 25vh;
-    position: absolute;
-    top: 30vh;
-    right: 17vw;
-    font-size: 0.2rem;
-  }
+//   #description_two {
+//     width: 25vw;
+//     height: 25vh;
+//     position: absolute;
+//     top: 30vh;
+//     right: 17vw;
+//     font-size: 0.2rem;
+//   }
 
-  #description_three {
-    width: 32vw;
-    height: 30vh;
-    font-size: 0.5rem;
-    // font-weight: 540;
-    line-height: 30px;
-    position: absolute;
-    left: 9vw;
-    top: 10vh;
-    font-family: 'Gowun Batang', seri
-  }
+//   #description_three {
+//     width: 32vw;
+//     height: 30vh;
+//     font-size: 0.5rem;
+//     // font-weight: 540;
+//     line-height: 30px;
+//     position: absolute;
+//     left: 9vw;
+//     top: 10vh;
+//     font-family: 'Gowun Batang', seri
+//   }
 
-}
+// }
 
-@media (max-width: 767px) {
+// @media (max-width: 767px) {
 
-  #desTextOne {
-    position: absolute;
-    bottom: 18vh;
-    left: 1vw;
-    font-size: 0.5px;
-  }
+//   #desTextOne {
+//     position: absolute;
+//     bottom: 18vh;
+//     left: 1vw;
+//     font-size: 0.5px;
+//   }
 
-  #description_two {
-    width: 25vw;
-    height: 25vh;
-    position: absolute;
-    top: 20vh;
-    right: 15vw;
-    font-size: 0.1px;
-    line-height: 0px;
-  }
+//   #description_two {
+//     width: 25vw;
+//     height: 25vh;
+//     position: absolute;
+//     top: 20vh;
+//     right: 15vw;
+//     font-size: 0.1px;
+//     line-height: 0px;
+//   }
 
-  #description_three {
-    width: 30vw;
-    height: 10vh;
+//   #description_three {
+//     width: 30vw;
+//     height: 10vh;
 
-    font-size: 0.05px;
-    // font-weight: 540;
-    line-height: 30px;
-    position: absolute;
-    left: 3vw;
-    top: 4vh;
-    font-family: 'Gowun Batang', seri
-  }
+//     font-size: 0.05px;
+//     // font-weight: 540;
+//     line-height: 30px;
+//     position: absolute;
+//     left: 3vw;
+//     top: 4vh;
+//     font-family: 'Gowun Batang', seri
+//   }
 
-}
+// }
