--- a/css/pilgrimagePgae/pilgrimagePage.scss
+++ b/css/pilgrimagePgae/pilgrimagePage.scss
@@ -157,9 +157,10 @@ body {
         &>div:nth-child(1){
           width: 44vw;
           color: #fff;
-          font-size: 1rem;
+          font-size: 0.8rem;
           line-height: 40px;
           text-align: justify;
+          //border: 1px solid red;
         }
       }
     }
@@ -454,7 +455,7 @@ body {
         &>div:nth-child(1){
           width: 35vw;
           height: 10vh;
-          // border: 1px solid #fff;
+          //border: 1px solid #fff;
           font-size: 2rem;
           font-weight: 600;
           letter-spacing: 3px;
@@ -463,10 +464,10 @@ body {
 
         &>div:nth-child(2) {
           width: 35vw;
-          height: 20vh;
-          font-size: 1rem;
+          height: 40vh;
+          // font-size: 0.5rem;
           line-height: 35px;
-          // border: 1px solid #fff;
+          //border: 1px solid #fff;
           @include flexCenter(flex-start, flex-end);
 
         }
